# ChessLikeGame

./: CMakeLists.txt  README.md
include/: ai.hpp  application.hpp  chessboard.hpp  game.hpp  player.hpp  utils.hpp
src/: ai.cpp  application.cpp  chessboard.cpp  game.cpp  main.cpp  player.cpp
